[project]
name = "multi-agent-recruitment-system"
version = "0.1.0"
description = "Workflow-orchestrated multi-agent recruitment screening prototype."
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "langgraph",
    "pypdf",
    "python-docx",
    "python-multipart",
    "uvicorn",
]
